--- a/Pendaftaran_Tenant/Views/Penyewa/Create.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/Create.cshtml
@@ -58,8 +58,18 @@
         <div class="form-group">
             @Html.LabelFor(model => model.status_bayar, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.status_bayar, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.status_bayar, "", new { @class = "text-danger" })
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.status_bayar)
+                    @Html.ValidationMessageFor(model => model.status_bayar, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.role, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.role, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.role, "", new { @class = "text-danger" })
             </div>
         </div>
 
