--- a/Pendaftaran_Tenant/Views/Penyewa/Index.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/Index.cshtml
@@ -29,6 +29,9 @@
         <th>
             @Html.DisplayNameFor(model => model.status_bayar)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.role)
+        </th>
         <th></th>
     </tr>
 
@@ -51,6 +54,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.status_bayar)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.role)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.id_penyewa }) |
