awal daftar, login, dan role

--- a/Pendaftaran_Tenant/Views/Shared/_LoginPartial.cshtml
+++ b/Pendaftaran_Tenant/Views/Shared/_LoginPartial.cshtml
@@ -3,7 +3,7 @@
 @if (@Session["user"] != null)
 {
     var u = Session["user"] as Penyewa;
-    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+    using (Html.BeginForm("Logout", "Penyewa", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
         @Html.AntiForgeryToken()
 
