--- a/Pendaftaran_Tenant/Views/Penyewa/Login.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/Login.cshtml
@@ -5,6 +5,8 @@
 }
 
 <h2>@ViewBag.Title.</h2>
+<hr />
+@Html.Raw(TempData["Pesan"])
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
@@ -28,17 +30,17 @@
                         @Html.ValidationMessageFor(m => m.password, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                
+
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <input type="submit" value="Log in" class="btn btn-default" />
                     </div>
                 </div>
-               
+
             }
         </section>
     </div>
-    
+
 </div>
 
 @section Scripts {
