--- a/Pendaftaran_Tenant/Views/Shared/_Layout.cshtml
+++ b/Pendaftaran_Tenant/Views/Shared/_Layout.cshtml
@@ -19,9 +19,14 @@
                 </button>
                 @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
+            
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("List penyewa", "Index", "Penyewa")</li>
+
+                    @if ((string)Session["role"] == "Admin")
+                        {
+                           <li>@Html.ActionLink("List penyewa", "Index", "Penyewa")</li>
+                        }
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
@@ -36,7 +41,7 @@
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-
+    
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
