--- a/Pendaftaran_Tenant/Views/Penyewa/Edit.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/Edit.cshtml
@@ -1,13 +1,12 @@
 ﻿@model Pendaftaran_Tenant.Penyewa
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
@@ -15,6 +14,8 @@
         <h4>Penyewa</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.id_penyewa)
+
         <div class="form-group">
             @Html.LabelFor(model => model.nama_perusahaan, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -56,9 +57,26 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.status_bayar, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.status_bayar)
+                    @Html.ValidationMessageFor(model => model.status_bayar, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.role, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.role, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.role, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-                
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
@@ -67,7 +85,3 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
