--- a/Pendaftaran_Tenant/Views/Penyewa/Index.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/Index.cshtml
@@ -6,9 +6,7 @@
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+@Html.Raw(TempData["Pesan"])
 <table class="table">
     <tr>
         <th>
@@ -35,36 +33,37 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.nama_perusahaan)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.password)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.alamat)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.no_telp)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.status_bayar)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.role)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.id_penyewa })
-            @Html.ActionLink("Buat Tabel", "Addtable", new { id = item.id_penyewa })
-            @*<button class="btn btn-success" onclick="location.href='@Url.Action("Edit", "Penyewa")?id=item.id_penyewa'">Edit Status Bayar</button>*@
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.nama_perusahaan)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.password)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.alamat)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.no_telp)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.status_bayar)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.role)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.id_penyewa })
+                @Html.ActionLink("Buat Tabel", "Addtable", new { id = item.id_penyewa })
+                @*<button class="btn btn-success" onclick="location.href='@Url.Action("Edit", "Penyewa")?id=item.id_penyewa'">Edit Status Bayar</button>*@
 
-        </td>
-    </tr>
-}
+            </td>
+        </tr>
+    }
 
 </table>
