--- a/Pendaftaran_Tenant/Views/Shared/_Layout.cshtml
+++ b/Pendaftaran_Tenant/Views/Shared/_Layout.cshtml
@@ -6,7 +6,10 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+    @Scripts.Render("~/Content/farbtastic.css")
+    
+    <script type="text/javascript" src="~/Scripts/farbtastic.js"></script>
+    <link rel="stylesheet" href="~/Content/farbtastic.css" type="text/css" />
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
