--- a/Pendaftaran_Tenant/Views/Penyewa/CreateUI.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/CreateUI.cshtml
@@ -6,31 +6,27 @@
 
 <h2>CreateUI</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm(Html.BeginForm("CreateUI", "Penyewa", FormMethod.Post,
+                                                new { enctype = "multipart/form-data" })))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Data_UI</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        
+
 
         <div class="form-group">
-            @Html.LabelFor(model => model.logo, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2" style="color:white" for="uploadlogo">Gambar Barang</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.logo, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.logo, "", new { @class = "text-danger" })
+                <input name="uploadlogo" type="file" class="form-control" />
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.warna_bg, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.warna_bg, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.warna_bg, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        <form action="" style="width: 400px;">
+            <div class="form-item"><label for="color">Color:</label><input type="text" id="color" name="color" value="#123456" /></div><div id="picker"></div>
+        </form>
 
         <div class="form-group">
             @Html.LabelFor(model => model.warna_navbar, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -48,6 +44,10 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+
+<script type="text/javascript" charset="utf-8">
+    $(document).ready(function () {
+        $('#demo').hide();
+        $('#picker').farbtastic('#color');
+    });
+</script>
