--- a/Pendaftaran_Tenant/Views/Penyewa/CreateJenisSablon.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/CreateJenisSablon.cshtml
@@ -1,4 +1,5 @@
-﻿@{ var namaproduk = Session["nama_produk"];}
+﻿
+@{ var namaproduk = Session["nama_produk"];}
 
 
 <h2>Isi Bahan untuk produk @namaproduk</h2>
@@ -6,16 +7,16 @@
 <div class="row">
     <div class="col-md-8">
 
-        @using (Html.BeginForm("CreateBahan2", "Penyewa", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        @using (Html.BeginForm("CreateJenisSablon", "Penyewa", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
         {
             @Html.AntiForgeryToken()
 
             <hr />
 
             <div class="form-group">
-                <label for="namabahan" class="col-md-2 control-label">Nama Bahan</label>
+                <label for="namajenissablon" class="col-md-2 control-label">Nama Jenis Sablon</label>
                 <div class="col-md-10">
-                    <input type="text" class="form-control" id="namabahan" name="namabahan" />
+                    <input type="text" class="form-control" id="namajenissablon" name="namajenissablon" />
 
                 </div>
             </div>
