--- a/Pendaftaran_Tenant/Views/Shared/_LoginPartial.cshtml
+++ b/Pendaftaran_Tenant/Views/Shared/_LoginPartial.cshtml
@@ -18,7 +18,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Daftar", "Create", "Penyewa", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
+        @*<li>@Html.ActionLink("Daftar", "Create", "Penyewa", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>*@
         <li>@Html.ActionLink("Log in", "Login", "Penyewa", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
     </ul>
 }
