--- a/Pendaftaran_Tenant/Views/Penyewa/CreateUI.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/CreateUI.cshtml
@@ -7,7 +7,7 @@
     <style type="text/css" media="screen">
 
         .colorwell {
-            border: 2px solid #fff;
+            
             width: 6em;
             text-align: center;
             cursor: pointer;
@@ -31,52 +31,67 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>Data_UI</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+<div class="form-horizontal text-center">
+    <h4>Data_UI</h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
 
-        <div class="form-group">
-            <label class="control-label col-md-2" style="color:black" for="uploadimage">Gambar Barang</label>
-            <div class="col-md-10">
-                <input name="uploadimage" type="file" class="form-control" />
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-6">
-                <script type="text/javascript" charset="utf-8">
-                    $(document).ready(function () {
-                        $('#demo').hide();
-                        var f = $.farbtastic('#picker');
-                        var p = $('#picker').css('opacity', 0.25);
-                        var selected;
-                        $('.colorwell')
-                            .each(function () { f.linkTo(this); $(this).css('opacity', 0.75); })
-                            .focus(function () {
-                                if (selected) {
-                                    $(selected).css('opacity', 0.75).removeClass('colorwell-selected');
-                                }
-                                f.linkTo(this);
-                                p.css('opacity', 1);
-                                $(selected = this).css('opacity', 1).addClass('colorwell-selected');
-                            });
-                    });
-                </script>
-                <form action="" style="width: 500px;">
-                    <div id="picker" style="float: right;"></div>
-                    <div class="form-item"><label for="color1">Color 1:</label><input type="text" id="color1" name="color1" class="colorwell" value="#123456" /></div>
-                    <div class="form-item"><label for="color2">Color 2:</label><input type="text" id="color2" name="color2" class="colorwell" value="#123456" /></div>
-                </form>
-            </div>
-            
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
+    <div class="form-group text-center">
+        <label class="control-label col-md-2" style="color:black" for="uploadimage">Gambar Barang</label>
+        <div class="col-md-10">
+            <input name="uploadimage" type="file" class="form-control" />
         </div>
     </div>
+
+    <script type="text/javascript" charset="utf-8">
+        $(document).ready(function () {
+            $('#demo').hide();
+            var f = $.farbtastic('#picker');
+            var p = $('#picker').css('opacity', 0.25);
+            var selected;
+            $('.colorwell')
+                .each(function () { f.linkTo(this); $(this).css('opacity', 0.75); })
+                .focus(function () {
+                    if (selected) {
+                        $(selected).css('opacity', 0.75).removeClass('colorwell-selected');
+                    }
+                    f.linkTo(this);
+                    p.css('opacity', 1);
+                    $(selected = this).css('opacity', 1).addClass('colorwell-selected');
+                });
+        });
+    </script>
+    <form action="" style="width: 500px;">
+
+        <div class="form-group">
+            <label class="control-label col-md-2" for="color1">Warna Background </label>
+            <div class="col-md-10">
+                <input type="text" id="color1" name="color1" class="colorwell form-control" value="#123456" />
+            </div>
+            </div>
+
+        <div class="form-group">
+            <label class="control-label col-md-2" for="color2">Warna Header Web </label>
+            <div class="col-md-10">
+                <input type="text" id="color2" name="color2" class="colorwell form-control" value="#123456" />
+            </div>
+            </div>
+        <div class="form-group">
+            <div class="col-md-10">
+                <div id="picker" style="float: none;"></div>
+                </div>
+            </div>
+</form>
+
+
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Create" class="btn btn-default" />
+        </div>
+    </div>
+</div>
 }
 
 
