--- a/Pendaftaran_Tenant/Views/Penyewa/Login.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/Login.cshtml
@@ -4,30 +4,32 @@
     ViewBag.Title = "Log in";
 }
 
-<h2>@ViewBag.Title.</h2>
-<hr />
+<h2 style="color:#47a447" class="text-center">@ViewBag.Title</h2>
+<hr  />
+
 @Html.Raw(TempData["Pesan"])
-<div class="row">
-    <div class="col-md-8">
+<div class="row text-center">
+    
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Penyewa", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <h4>Use a local account to log in.</h4>
-                <hr />
+               
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(m => m.email, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.email, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.email, "", new { @class = "text-danger" })
+            <div class="form-group text-center">
+                <div class="col-md-6 col-md-offset-3">
+                    @Html.LabelFor(m => m.email)
+
+                    @Html.TextBoxFor(m => m.email, new { @class = "form-control", @style = "margin:0" })
+                    @Html.ValidationMessageFor(m => m.email, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.password, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.PasswordFor(m => m.password, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.password, "", new { @class = "text-danger" })
+            <div class="form-group text-center">
+                <div class="col-md-6 col-md-offset-3">
+                    @Html.LabelFor(m => m.password)
+
+                    @Html.PasswordFor(m => m.password, new { @class = "form-control", @style = "margin:0" })
+                    @Html.ValidationMessageFor(m => m.password, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
@@ -37,11 +39,11 @@
                     </div>
                 </div>
 
-            }
-        </section>
+                }
+</section>
     </div>
 
-</div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
