--- a/Pendaftaran_Tenant/Views/Shared/_Layout.cshtml
+++ b/Pendaftaran_Tenant/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("MTS", "Index", "Home", new { area = "" }, new { @class = "navbar-brand", @style = "font-family:'Compass LT';color:#47a447;font-size:larger" })
             </div>
             
             <div class="navbar-collapse collapse">
@@ -28,8 +28,8 @@
                         {
                            <li>@Html.ActionLink("List penyewa", "Index", "Penyewa")</li>
                         }
-                    <li>@Html.ActionLink("Produk", "IndexProduk", "Penyewa")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @*<li>@Html.ActionLink("Produk", "IndexProduk", "Penyewa")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
