--- a/Pendaftaran_Tenant/Views/Penyewa/CreateCarausel.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/CreateCarausel.cshtml
@@ -5,6 +5,7 @@
 }
 
 <h2>CreateCarausel</h2>
+@Html.Raw(TempData["Pesan2"])
 @Html.Raw(TempData["Pesan"])
 @using (Html.BeginForm("CreateCarausel", "Penyewa", FormMethod.Post,
                                                 new { enctype = "multipart/form-data" }))
@@ -26,6 +27,7 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
+                @Html.ActionLink("Lanjut ke penambahan produk", "CreateProduk", "Penyewa", null, new { onclick = "return confirm('Anda yakin sudah selesai mengisi carausel dan hendak melanjutkan ke pengisian produk?')" })
             </div>
         </div>
     </div>
