--- a/Pendaftaran_Tenant/Views/Home/Index.cshtml
+++ b/Pendaftaran_Tenant/Views/Home/Index.cshtml
@@ -12,22 +12,21 @@
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2  style="color:#47a447">Daftarkan Produk-Produk Anda!</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+           Nikmati kemudahan pendataan produk-produk yang dapat dipasarkan
+            melalui website Multi-Tenan Sablon.
         </p>
         
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+        <h2 style="color:#47a447">Pendaftaran WebSite Mudah!</h2>
+        <p>Hanya dengan mengisikan data yang diperlukan, anda dapat memperoleh website canggih dari kami.</p>
         
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+        <h2 style="color:#47a447">Harga Terjangkau dan Banyak Bonus!</h2>
+        <p>Harga bukanlah hal yang perlu dikhawatirkan, kami menyediakan layanan dengan harga termurah!</p>
         
     </div>
 </div>
