--- a/Pendaftaran_Tenant/Views/Penyewa/Create.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/Create.cshtml
@@ -3,70 +3,75 @@
 @{
     ViewBag.Title = "Create";
 }
-
-<h2>Create</h2>
-
-
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Penyewa</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.nama_perusahaan, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.nama_perusahaan, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.nama_perusahaan, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.password, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.alamat, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.alamat, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.alamat, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.no_telp, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.no_telp, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.no_telp, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-                
-            </div>
-        </div>
-    </div>
+@{
+    Layout = "~/Views/Shared/_LayoutNoBar.cshtml";
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
+<div class="col-md-12 col-xs-12" style="margin-left:35%">
+    <br />
+    <div class="thumbnail clearfix text-center" style="max-width:300px;width:100%">
+
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+            <h2 class="text-center" style="color:#47a447">Daftar</h2>
+
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+            <table style="border:0 solid;float:none;margin:0 auto">
+                <tr><th style="text-align:center"> <label>Nama Perusahaan</label></th></tr>
+                <tr>
+                    <td style="text-align:center">
+                        @Html.EditorFor(model => model.nama_perusahaan, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.nama_perusahaan, "", new { @class = "text-danger" })
+                    </td>
+                </tr>
+                <tr><th style="text-align:center"><label>E-Mail</label></th></tr>
+                <tr>
+                    <td style="text-align:center">
+                        @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
+                    </td>
+                </tr>
+                <tr><th style="text-align:center"><label>Password</label></th></tr>
+                <tr>
+                    <td style="text-align:center">
+                        @Html.PasswordFor(model => model.password, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+                    </td>
+                </tr>
+                <tr><th style="text-align:center"> <label>Alamat</label></th></tr>
+                <tr>
+                    <td style="text-align:center">
+                        @Html.EditorFor(model => model.alamat, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.alamat, "", new { @class = "text-danger" })
+                    </td>
+                </tr>
+                <tr><th style="text-align:center"><label>Nomor Telephon</label></th></tr>
+                <tr>
+                    <td style="text-align:center">
+                        @Html.EditorFor(model => model.no_telp, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.no_telp, "", new { @class = "text-danger" })
+                    </td>
+                </tr>
+            </table>
+
+
+            <br />
+            <div>
+
+                <input type="submit" value="Daftar" class="btn btn-success" />
+                <br />
+                <p> <a onclick="location.href='@Url.Action("Index", "Home")'" class="btn btn-warning btn-xs" style="margin-top:10px">Kembali ke beranda</a></p>
+            </div>
+            <br />
+            <br />
+
+        }
+    </div>
 </div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
