--- a/Pendaftaran_Tenant/Views/Penyewa/KonfirmasiDaftar.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/KonfirmasiDaftar.cshtml
@@ -51,12 +51,13 @@
             <p>Kami telah mengirimkan informasi pembayaran ke <b>@Html.DisplayFor(modelItem => item.email)</b>. Konfirmasi pembayaran
             dapat dilakukan melalui email tersebut.</p>
             <p>Pembayaran dapat dilakukan melalui : </p>
-            
-                <img src="~/Content/Images/vector-logo-bca.jpg" class="img-rounded" alt="bank BCA" />
-                <img src="~/Content/Images/Logo Bank BNI JPG.jpeg" class="img-rounded" alt="bank BNI" />
-                <img src="~/Content/Images/mandiri_logo.png" class="img-rounded" alt="bank Mandiri" />
-
-            
+            <div class="row text-center">
+                <div class="col-md-4 col-xs-4"><img src="~/Content/Images/vector-logo-bca.jpg" class="img-responsive" alt="bank BCA" /></div>
+                <div class="col-md-4 col-xs-4"><img src="~/Content/Images/Logo Bank BNI JPG.jpeg" style="padding-top:30px" class="img-responsive" alt="bank BNI" /></div>
+                <div class="col-md-4 col-xs-4"><img src="~/Content/Images/mandiri_logo.png" style="padding-top:20px" class="img-responsive" alt="bank Mandiri" /></div>
+            </div>
+            <p>Harap melakukan Log in setelah pembayaran dikonfirmasi</p>
+            <p><a onclick="location.href='@Url.Action("Index", "Home")'" class="btn btn-success btn-sm">Kembali ke beranda</a></p>
         </div>
     }
     </div>
