--- a/Pendaftaran_Tenant/Views/Penyewa/Login.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/Login.cshtml
@@ -3,45 +3,59 @@
 @{
     ViewBag.Title = "Log in";
 }
-
+@{
+    Layout = "~/Views/Shared/_LayoutNoBar.cshtml";
+}
 <h2 style="color:#47a447" class="text-center">@ViewBag.Title</h2>
-<hr  />
+<hr />
 
 @Html.Raw(TempData["Pesan"])
-<div class="row text-center">
-    
+<div class="col-md-12 col-xs-12" style="margin-left:35%">
+    <div class="thumbnail clearfix text-center" style="max-width:300px;width:100%">
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Penyewa", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-               
+
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group text-center">
-                <div class="col-md-6 col-md-offset-3">
-                    @Html.LabelFor(m => m.email)
-
-                    @Html.TextBoxFor(m => m.email, new { @class = "form-control", @style = "margin:0" })
-                    @Html.ValidationMessageFor(m => m.email, "", new { @class = "text-danger" })
-                    </div>
+                <table style="border:0 solid;float:none;margin:0 auto">
+                    <tr>
+                        <th style="text-align:center">
+                            @Html.LabelFor(m => m.email)
+                        </th>
+                    <tr>
+                        <td style="text-align:center">
+                            @Html.TextBoxFor(m => m.email, new { @class = "form-control text-center", @style = "margin:0" })
+                            @Html.ValidationMessageFor(m => m.email, "", new { @class = "text-danger" })
+                        </td>
+                    </tr>
+                    <tr>
+                        &nbsp;
+                    </tr>
+                    <tr>
+                        <th style="text-align:center">
+                            @Html.LabelFor(m => m.password)
+                        </th>
+                    </tr>
+                    <tr>
+                        <td style="text-align:center">
+                            @Html.PasswordFor(m => m.password, new { @class = "form-control text-center", @style = "margin:0" })
+                            @Html.ValidationMessageFor(m => m.password, "", new { @class = "text-danger" })
+                        </td>
+                    </tr>
+                </table>
+                <br />
+                <div>
+                    <a onclick="location.href='@Url.Action("Index", "Home")'" class="btn btn-warning btn-sm">Kembali ke beranda</a>
+                    <input type="submit" value="Log in" class="btn btn-success" />
                 </div>
-            <div class="form-group text-center">
-                <div class="col-md-6 col-md-offset-3">
-                    @Html.LabelFor(m => m.password)
+                <br />
 
-                    @Html.PasswordFor(m => m.password, new { @class = "form-control", @style = "margin:0" })
-                    @Html.ValidationMessageFor(m => m.password, "", new { @class = "text-danger" })
-                    </div>
-                </div>
 
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
-                    </div>
-                </div>
-
-                }
-</section>
+            }
+        </section>
     </div>
+</div>
 
 
 
