--- a/Pendaftaran_Tenant/Views/Shared/_Layout.cshtml
+++ b/Pendaftaran_Tenant/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
     @RenderSection("farbtastic", false)
+    @RenderSection("navwizard", false)
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
