--- a/Pendaftaran_Tenant/Views/Penyewa/CreateBahan2.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/CreateBahan2.cshtml
@@ -1,35 +1,44 @@
-﻿@{ var namaproduk = Session["nama_produk"];}
+﻿
+@{ var namaproduk = Session["nama_produk"];}
+
+@section navwizard {
 
 
-<h2>Isi Bahan untuk produk @namaproduk</h2>
-@Html.Raw(TempData["Pesan"])
-<div class="row">
-    <div class="col-md-8">
+    <link rel="stylesheet" href="~/Content/bootstrap-nav-wizard.css" type="text/css" />
 
-        @using (Html.BeginForm("CreateBahan2", "Penyewa", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+}
+<div class="text-center">
+    <ul class="nav nav-wizard" style="display:inline-block">
+        <li><a style="color:#47a447">Design Website</a></li>
+        <li><a style="color:#47a447">Gambar Homepage</a></li>
+        <li class="active"><a>Data Produk, Bahan, dan Jenis Sablon</a></li>
+        <li><a style="color:#47a447">Data Harga</a></li>
+
+    </ul>
+</div>
+
+@*@Html.Raw(TempData["Pesan"])*@
+<div class="col-md-6 col-xs-6">
+    <div class="thumbnail clearfix text-center" style="max-width:500px;width:100%">
+
+        @using (Html.BeginForm("CreateBahan", "Penyewa", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
         {
             @Html.AntiForgeryToken()
-
+            <h2>Isi Bahan untuk produk @namaproduk</h2>
             <hr />
+            <table style="border:0 solid;float:none;margin:0 auto">
+                <tr><th><label for="namabahan">Nama Bahan</label></th></tr>
+                <tr><td><input type="text" class="form-control" id="namabahan" name="namabahan" /></td></tr>
+            </table>
 
-            <div class="form-group">
-                <label for="namabahan" class="col-md-2 control-label">Nama Bahan</label>
-                <div class="col-md-10">
-                    <input type="text" class="form-control" id="namabahan" name="namabahan" />
 
-                </div>
-            </div>
 
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Simpan" class="btn btn-default" />
-                </div>
-            </div>
+            <input type="submit" value="Simpan" class="btn btn-success" />
+
 
         }
 
     </div>
 
 </div>
-
 
